--- a/Calculator.html
+++ b/Calculator.html
@@ -6,47 +6,45 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="Calculator.css">
 </head>
-
 <body>
-
-<div class="container">
-    <div class="calculator">
-        <form>
-            <div class="display">
-                <input type="text" name="displayed">
-            </div>
-            <div>
-                <input type="button" value="AC">
-                <input type="button" value="DE">
-                <input type="button" value=".">
-                <input type="button" value="/">
-            </div>
-            <div>
-                <input type="button" value="7">
-                <input type="button" value="8">
-                <input type="button" value="9">
-                <input type="button" value="*">
-            </div>
-            <div>
-                <input type="button" value="4">
-                <input type="button" value="5">
-                <input type="button" value="6">
-                <input type="button" value="-">
-            </div>
-            <div>
-                <input type="button" value="1">
-                <input type="button" value="2">
-                <input type="button" value="3">
-                <input type="button" value="+">
-            </div>
-            <div>
-                <input type="button" value="00">
-                <input type="button" value="0">
-                <input type="button" value="=" class="equal">
-            </div>
-        </form>
+    <div class="container">
+        <div class="calculator">
+            <form name="calc">
+                <div class="display">
+                    <input type="text" name="displayed" readonly>
+                </div>
+                <div>
+                    <input type="button" value="AC" onclick="clearDisplay()">
+                    <input type="button" value="DE" onclick="deleteLast()">
+                    <input type="button" value="." onclick="appendValue('.')">
+                    <input type="button" value="/" onclick="appendValue('/')">
+                </div>
+                <div>
+                    <input type="button" value="7" onclick="appendValue('7')">
+                    <input type="button" value="8" onclick="appendValue('8')">
+                    <input type="button" value="9" onclick="appendValue('9')">
+                    <input type="button" value="*" onclick="appendValue('*')">
+                </div>
+                <div>
+                    <input type="button" value="4" onclick="appendValue('4')">
+                    <input type="button" value="5" onclick="appendValue('5')">
+                    <input type="button" value="6" onclick="appendValue('6')">
+                    <input type="button" value="-" onclick="appendValue('-')">
+                </div>
+                <div>
+                    <input type="button" value="1" onclick="appendValue('1')">
+                    <input type="button" value="2" onclick="appendValue('2')">
+                    <input type="button" value="3" onclick="appendValue('3')">
+                    <input type="button" value="+" onclick="appendValue('+')">
+                </div>
+                <div>
+                    <input type="button" value="00" onclick="appendValue('00')">
+                    <input type="button" value="0" onclick="appendValue('0')">
+                    <input type="button" value="=" class="equal" onclick="calculate()">
+                </div>
+            </form>
+        </div>
     </div>
-</div>
-
+    <script src="Calculator.js"></script>
 </body>
 </html>
